EX-201: fix long payload wrap

--- a/assets/less/include/utils.less
+++ b/assets/less/include/utils.less
@@ -12,6 +12,12 @@
 .u-text-muted {color: @c-black-light;}
 .u-text-overflow {overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .u-text-break {overflow-wrap: break-word;}
+.u-text-wrap-anywhere {
+    overflow-wrap: anywhere;
+    @supports not (overflow-wrap: anywhere) {
+        word-break: break-word;
+    }
+}
 .u-text-nowrap {white-space: nowrap;}
 .u-text-pre-line {white-space: pre-line;}
 .u-text-tabular-nums {font-variant-numeric: tabular-nums;}
